[gd_scene load_steps=17 format=4 uid="uid://dcwd5tcnbbe85"]

[ext_resource type="Script" path="res://rooms/options_menu.gd" id="1_h01qx"]
[ext_resource type="FontFile" uid="uid://cqqwligvnvq1" path="res://core components/alagard.ttf" id="2_b4l4i"]
[ext_resource type="Texture2D" uid="uid://b60w5lubcj66p" path="res://sprites/Dungeon Tile Set.png" id="3_dpca0"]
[ext_resource type="Shader" path="res://entities/energy_beam.gdshader" id="3_pwkwa"]
[ext_resource type="Shader" path="res://entities/god_rays.gdshader" id="4_pwmbs"]
[ext_resource type="Shader" path="res://old/testShader.gdshader" id="5_8ms63"]
[ext_resource type="AudioStream" uid="uid://d1ug6q7vqfku1" path="res://sfx/BNA_UI44.wav" id="7_7l81f"]
[ext_resource type="AudioStream" uid="uid://cm0ghscxotl68" path="res://sfx/BNA_UI18.wav" id="8_s7k0k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bsh40"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xln1o"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ffanj"]
texture = ExtResource("3_dpca0")
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
6:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
5:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
10:10/0 = 0
12:10/0 = 0
13:10/0 = 0
1:11/0 = 0
2:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
12:11/0 = 0
13:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
2:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0

[sub_resource type="TileSet" id="TileSet_gtquh"]
sources/0 = SubResource("TileSetAtlasSource_ffanj")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0u7uy"]
shader = ExtResource("3_pwkwa")
shader_parameter/beams = 1
shader_parameter/energy = 1.0
shader_parameter/roughness = 1
shader_parameter/frequency = 5
shader_parameter/speed = 4.25
shader_parameter/thickness = 0.016
shader_parameter/outline_thickness = 0.03
shader_parameter/beam_difference = 0.1
shader_parameter/glow = 0.0
shader_parameter/outline_glow = 0.0
shader_parameter/color = Color(0.8, 0.2, 0.8, 0.9)
shader_parameter/outline_color = Color(0.8, 0.2, 0.8, 0.8)
shader_parameter/progress = 1.0
shader_parameter/y_offset = 0.0
shader_parameter/fixed_edge_size = 0.05
shader_parameter/noise_scale = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mj51v"]
shader = ExtResource("4_pwmbs")
shader_parameter/angle = 0.2
shader_parameter/position = 0.2
shader_parameter/spread = 0.5
shader_parameter/cutoff = 0.01
shader_parameter/falloff = 0.4
shader_parameter/edge_fade = 0.25
shader_parameter/speed = 5.0
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.3
shader_parameter/color = Color(0.5, 0.25, 0.5, 0.4)
shader_parameter/hdr = false
shader_parameter/seed = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0wvrk"]
shader = ExtResource("5_8ms63")
shader_parameter/range = 0.05
shader_parameter/noiseQuality = 250.0
shader_parameter/noiseIntensity = 0.0088
shader_parameter/offsetIntensity = 0.03
shader_parameter/colorOffsetIntensity = 1.3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_mqeap"]
width = 750

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h01qx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
z_index = 1
layout_mode = 0
offset_top = 22.0
offset_right = 320.0
offset_bottom = 179.0

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.47, 0.47, 0.47, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = -5
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("2_b4l4i")
theme_override_font_sizes/font_size = 40
text = "OPTIONS"
horizontal_alignment = 1

[node name="controls_Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b4l4i")
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxEmpty_bsh40")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xln1o")
text = "Controls"

[node name="reset_Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b4l4i")
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxEmpty_bsh40")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xln1o")
text = "Reset Progress"

[node name="back_Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b4l4i")
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxEmpty_bsh40")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xln1o")
text = "Back"

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_top = 13.0
offset_right = 320.0
offset_bottom = 92.0

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.281187, 0.281187, 0.281187, 1)
theme_override_colors/font_shadow_color = Color(0.162066, 0.162066, 0.162066, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = -5
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("2_b4l4i")
theme_override_font_sizes/font_size = 39
text = "OPTIONS"
horizontal_alignment = 1

[node name="TileMapLayer" type="TileMapLayer" parent="ColorRect"]
tile_map_data = PackedByteArray("AAAAAAAAAAADAAIAAAAAAAEAAAADAAIAAAABAAEAAAACAAIAAAABAAIAAAAMAAIAAAACAAIAAAACAAIAAAAAAAIAAAADAAIAAAAAAAMAAAADAAIAAAAAAAQAAAADAAIAAAAAAAUAAAADAAIAAAAAAAYAAAADAAIAAAAAAAcAAAADAAIAAAAAAAgAAAADAAIAAAAAAAkAAAADAAIAAAAAAAoAAAADAAIAAAABAAAAAAACAAIAAAABAAMAAAACAAIAAAABAAQAAAACAAIAAAABAAUAAAACAAIAAAABAAYAAAACAAIAAAABAAcAAAACAAIAAAABAAgAAAACAAIAAAABAAkAAAALAAcAAAABAAoAAAACAAIAAAACAAAAAAAKAAQAAAACAAEAAAACAAIAAAACAAMAAAACAAIAAAACAAQAAAACAAIAAAACAAUAAAACAAIAAAACAAYAAAALAAYAAAACAAcAAAACAAIAAAACAAgAAAACAAIAAAACAAkAAAACAAIAAAACAAoAAAACAAIAAAADAAAAAAALAAQAAAADAAEAAAACAAIAAAADAAIAAAAIAAEAAAADAAMAAAAIAAIAAAADAAQAAAACAAIAAAADAAUAAAACAAIAAAADAAYAAAACAAIAAAADAAcAAAACAAIAAAADAAgAAAACAAIAAAADAAkAAAACAAIAAAADAAoAAAAHAAcAAAAEAAAAAAACAAIAAAAEAAEAAAACAAIAAAAEAAIAAAAJAAEAAAAEAAMAAAALAAYAAAAEAAQAAAACAAIAAAAEAAUAAAACAAIAAAAEAAYAAAACAAIAAAAEAAcAAAAMAAIAAAAEAAgAAAACAAIAAAAEAAkAAAACAAIAAAAEAAoAAAACAAIAAAAFAAAAAAACAAIAAAAFAAEAAAACAAIAAAAFAAIAAAAJAAEAAAAFAAMAAAAJAAEAAAAFAAQAAAACAAIAAAAFAAUAAAACAAIAAAAFAAYAAAACAAIAAAAFAAcAAAACAAIAAAAFAAgAAAACAAIAAAAFAAkAAAACAAIAAAAFAAoAAAACAAIAAAAGAAAAAAACAAIAAAAGAAEAAAACAAIAAAAGAAIAAAAJAAIAAAAGAAMAAAAIAAMAAAAGAAQAAAACAAIAAAAGAAUAAAAMAAIAAAAGAAYAAAACAAIAAAAGAAcAAAACAAIAAAAGAAgAAAACAAIAAAAGAAkAAAACAAIAAAAGAAoAAAACAAIAAAAHAAAAAAAKAAcAAAAHAAEAAAACAAIAAAAHAAIAAAAJAAIAAAAHAAMAAAAJAAIAAAAHAAQAAAACAAIAAAAHAAUAAAACAAIAAAAHAAYAAAACAAIAAAAHAAcAAAACAAIAAAAHAAgAAAACAAIAAAAHAAkAAAACAAIAAAAHAAoAAAACAAIAAAAIAAAAAAACAAIAAAAIAAEAAAACAAIAAAAIAAIAAAANAAEAAAAIAAMAAAAJAAUAAAAIAAQAAAACAAIAAAAIAAUAAAACAAIAAAAIAAYAAAACAAIAAAAIAAcAAAACAAIAAAAIAAgAAAACAAIAAAAIAAkAAAAMAAIAAAAIAAoAAAACAAIAAAAJAAAAAAACAAIAAAAJAAEAAAACAAIAAAAJAAIAAAANAAEAAAAJAAMAAAAIAAQAAAAJAAQAAAACAAIAAAAJAAUAAAACAAIAAAAJAAYAAAACAAIAAAAJAAcAAAACAAIAAAAJAAgAAAACAAIAAAAJAAkAAAACAAIAAAAJAAoAAAACAAIAAAAKAAAAAAACAAIAAAAKAAEAAAACAAIAAAAKAAIAAAAIAAQAAAAKAAMAAAAJAAUAAAAKAAQAAAACAAIAAAAKAAUAAAACAAIAAAAKAAYAAAACAAIAAAAKAAcAAAACAAIAAAAKAAgAAAACAAIAAAAKAAkAAAACAAIAAAAKAAoAAAACAAIAAAALAAAAAAACAAIAAAALAAEAAAACAAIAAAALAAIAAAACAAIAAAALAAMAAAACAAIAAAALAAQAAAACAAIAAAALAAUAAAACAAIAAAALAAYAAAACAAIAAAALAAcAAAACAAIAAAALAAgAAAACAAIAAAALAAkAAAACAAIAAAALAAoAAAACAAIAAAAMAAAAAAACAAIAAAAMAAEAAAACAAIAAAAMAAIAAAAJAAMAAAAMAAMAAAAIAAEAAAAMAAQAAAACAAIAAAAMAAUAAAACAAIAAAAMAAYAAAACAAIAAAAMAAcAAAACAAIAAAAMAAgAAAACAAIAAAAMAAkAAAACAAIAAAAMAAoAAAACAAIAAAANAAAAAAACAAIAAAANAAEAAAACAAIAAAANAAIAAAAJAAMAAAANAAMAAAAJAAUAAAANAAQAAAACAAIAAAANAAUAAAACAAIAAAANAAYAAAACAAIAAAANAAcAAAACAAIAAAANAAgAAAACAAIAAAANAAkAAAACAAIAAAANAAoAAAACAAIAAAAOAAAAAAACAAIAAAAOAAEAAAACAAIAAAAOAAIAAAAJAAIAAAAOAAMAAAAJAAIAAAAOAAQAAAACAAIAAAAOAAUAAAACAAIAAAAOAAYAAAACAAIAAAAOAAcAAAAIAAcAAAAOAAgAAAACAAIAAAAOAAkAAAACAAIAAAAOAAoAAAACAAIAAAAPAAAAAAACAAIAAAAPAAEAAAACAAIAAAAPAAIAAAAJAAUAAAAPAAMAAAAJAAUAAAAPAAQAAAACAAIAAAAPAAUAAAACAAIAAAAPAAYAAAACAAIAAAAPAAcAAAACAAIAAAAPAAgAAAACAAIAAAAPAAkAAAACAAIAAAAPAAoAAAAKAAMAAAAQAAEAAAAMAAUAAAAQAAIAAAAJAAUAAAAQAAMAAAAJAAMAAAAQAAQAAAACAAIAAAAQAAUAAAACAAIAAAAQAAYAAAAMAAIAAAAQAAcAAAACAAIAAAAQAAgAAAACAAIAAAAQAAkAAAACAAIAAAAQAAoAAAALAAMAAAARAAEAAAACAAIAAAARAAIAAAACAAIAAAARAAMAAAACAAIAAAARAAQAAAACAAIAAAARAAUAAAACAAIAAAARAAYAAAACAAIAAAARAAcAAAACAAIAAAARAAgAAAACAAIAAAARAAkAAAACAAIAAAARAAoAAAAMAAMAAAASAAEAAAACAAIAAAASAAIAAAACAAIAAAASAAMAAAAMAAUAAAASAAQAAAACAAIAAAASAAUAAAACAAIAAAASAAYAAAANAAMAAAASAAcAAAACAAIAAAASAAgAAAAHAAcAAAASAAkAAAACAAIAAAASAAoAAAACAAIAAAATAAAAAAABAAIAAAATAAEAAAABAAIAAAATAAIAAAABAAIAAAATAAMAAAABAAIAAAATAAQAAAABAAIAAAATAAUAAAABAAIAAAATAAYAAAABAAIAAAATAAcAAAABAAIAAAATAAgAAAABAAIAAAATAAkAAAABAAIAAAATAAoAAAABAAIAAAASAAAAAAAKAAcAAAARAAAAAAAJAAcAAAAAAAsAAAADAAIAAAATAAsAAAABAAIAAAABAAsAAAACAAIAAAACAAsAAAACAAIAAAADAAsAAAACAAIAAAAEAAsAAAACAAIAAAAFAAsAAAACAAIAAAAGAAsAAAACAAIAAAAHAAsAAAACAAIAAAAIAAsAAAACAAIAAAAJAAsAAAACAAIAAAAKAAsAAAACAAIAAAALAAsAAAACAAIAAAAMAAsAAAAKAAcAAAANAAsAAAACAAIAAAAOAAsAAAACAAIAAAAPAAsAAAAKAAQAAAAQAAsAAAALAAQAAAARAAsAAAACAAIAAAASAAsAAAACAAIAAAA=")
tile_set = SubResource("TileSet_gtquh")

[node name="beam" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_0u7uy")
layout_mode = 0
offset_right = 320.0
offset_bottom = 151.0

[node name="godrays" type="ColorRect" parent="."]
z_index = 2
material = SubResource("ShaderMaterial_mj51v")
layout_mode = 0
offset_left = -18.0
offset_top = -13.0
offset_right = 355.0
offset_bottom = 234.0
color = Color(1, 1, 1, 0.113725)

[node name="distortion" type="TextureRect" parent="."]
z_index = 2
material = SubResource("ShaderMaterial_0wvrk")
layout_mode = 0
offset_top = -120.0
offset_right = 615.0
offset_bottom = 392.0
scale = Vector2(0.520001, 0.4)
texture = SubResource("NoiseTexture2D_mqeap")
stretch_mode = 4

[node name="selectSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_7l81f")

[node name="focusSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_s7k0k")

[connection signal="focus_entered" from="ColorRect/VBoxContainer/controls_Button" to="." method="_on_controls_button_focus_entered"]
[connection signal="pressed" from="ColorRect/VBoxContainer/controls_Button" to="." method="_on_controls_button_pressed"]
[connection signal="focus_entered" from="ColorRect/VBoxContainer/reset_Button" to="." method="_on_reset_button_focus_entered"]
[connection signal="pressed" from="ColorRect/VBoxContainer/reset_Button" to="." method="_on_begin_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/reset_Button" to="." method="_on_reset_button_pressed"]
[connection signal="focus_entered" from="ColorRect/VBoxContainer/back_Button" to="." method="_on_back_button_focus_entered"]
[connection signal="pressed" from="ColorRect/VBoxContainer/back_Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/back_Button" to="." method="_on_back_button_pressed"]
